--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "mongoose": "^5.11.18",
     "morgan": "~1.9.1",
+    "node-fetch": "^2.6.1",
     "pug": "^3.0.2"
   }
 }
